# babyrs

./: .env  .gitignore  .pre-commit-config.yaml  .vsls.json  Cargo.toml  README.md
.github/workflows/: test.yml
migrations/2023-07-01-194437_initial/: up.sql
sample/: example.csv
src/: app.rs  event.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs  terminal.rs  terminal_ui.rs  ui.rs
src/terminal/: app.rs  events.rs  mod.rs  state.rs  ui.rs
tests/: test_db.rs  test_state.rs
tests/common/: mod.rs
