[package]
name = "babyrs"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
crossterm = { version = "0.26.1", features = ["serde"] }
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.19"
serde = "1.0.174"
simple_logger = "4.2.0"
tui = "0.19.0"
