[package]
name = "babyrs"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.28", features = ["serde"]}
crossterm = { version = "0.27.0", features = ["serde"] }
csv = "1.2.2"
diesel = { version = "2.1.1", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.20"
ratatui = {version = "0.24.0", features = ["widget-calendar"]}
serde = "1.0.188"
time ={version = "0.3.29", features = ["local-offset"]}
